--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,20 @@
 version: 2
 jobs:
+  test:
+    docker:
+      - image: circleci/golang:1.13.1
+    steps:
+      - checkout
+      - run: echo "Hello from Test job"
   build:
     docker:
       - image: circleci/golang:1.13.1
     steps:
       - checkout
-      - run: echo "First tentative"
+      - run: echo "Hello from Build job"
+workflows:
+  version: 2
+  project_build:
+    jobs:
+      - test
+      - build
