--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,10 +6,12 @@ jobs:
     steps:
       - checkout
       - run: make test
-      - run: |
-        echo $(pwd)
-        tree
-        uname -a
+      - run:
+          name: debug_info
+          command: |
+            echo $(pwd)
+            tree
+            uname -a
   build:
     docker:
       - image: circleci/golang:1.13.1
