--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,17 @@
 version: 2
 jobs:
-  test:
-    docker:
-      - image: circleci/golang:1.13.1
-    steps:
-      - run:
-          name: pre_clone
-          command: |
-            uname -a
-            echo $(pwd)
-            ls -la
-      - checkout
-      - run: make test
-      - run:
-          name: debug_info
-          command: |
-            echo $(pwd)
-            ls -la
   build:
     docker:
-      - image: circleci/golang:1.13.1
+      - image: circleci/golang:1.13.3
     steps:
       - checkout
+      - run: make test
       - run: make build
-workflows:
-  version: 2
-  project_build:
-    jobs:
-      - test
-      - build
+      - run: make acceptance
+      - run: make release
+#workflows:
+#  version: 2
+#  project_build:
+#    jobs:
+#      - unit-test
+#      - build
