--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,21 @@ jobs:
       - image: circleci/golang:1.13.3
     steps:
       - checkout
-      - run: make test
-      - run: make build
-      - run: make acceptance
-      - run: make release
+      - run:
+        name: Unit tests
+        command: make test
+      - run:
+        name: Build binary
+        command: make build
+      - run:
+        name: Acceptance tests
+        command: make acceptance
+      - run:
+        name: Release
+        command: make release
+      - store_artifacts:
+        path: output/release
+        destination: binaries
 #workflows:
 #  version: 2
 #  project_build:
