--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,12 @@ jobs:
 #          destination: binaries
 workflows:
   version: 2
+  nightly-check:
+    triggers:
+      - schedule:
+          cron: "0 21 * * *"
+    jobs:
+      - build-n-check
   commit:
     jobs:
       - build-n-check
