--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,8 +4,11 @@ jobs:
     docker:
       - image: circleci/golang:1.13.3
     steps:
+      - run: |
+        pwd
+        ls -la .
+        ls -la ..
       - checkout
-      - run: env
       - run:
           name: Unit tests
           command: make test
@@ -20,7 +23,6 @@ jobs:
       - image: circleci/golang:1.13.3
     steps:
       - checkout
-      - run: env
       - run:
           name: Release
           command: make release
