--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,10 +4,11 @@ jobs:
     docker:
       - image: circleci/golang:1.13.3
     steps:
-      - run: |
-        pwd
-        ls -la .
-        ls -la ..
+      - run:
+          command: |
+            pwd
+            ls -la .
+            ls -la ..
       - checkout
       - run:
           name: Unit tests
