--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,9 @@ jobs:
       - store_artifacts:
           path: output/release
           destination: binaries
+      - publish_docker_image:
+          name: Publish docker image
+          command: make image
 workflows:
   version: 2
   nightly-check:
