--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
           path: output/release
           destination: binaries
       - setup_remote_docker
-      - publish_image:
+      - run:
           name: Dockerhub
           command: make image
 workflows:
