Added docker credential context to the deploy workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,6 +54,7 @@ workflows:
               only: /^v.*/
       - release:
           context: GitHub-Creds
+          context: DockerHub-Creds
           filters:
             branches:
               ignore: /.*/
