Back to one context with all credentials

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,8 +53,7 @@ workflows:
             tags:
               only: /^v.*/
       - release:
-          context: GitHub-Creds
-          context: DockerHub-Creds
+          context: Credentials
           filters:
             branches:
               ignore: /.*/
